--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="./public/assets/eff-small.png"
-    />
+    <link rel="icon" type="image/svg+xml" href="./assets/eff-small.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EFF BI</title>
   </head>
