--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-PBKC681C06"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-PBKC681C06");
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./assets/eff-small.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EFF BI</title>
   </head>
+  <!-- Google tag (gtag.js) -->
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
